# Quantum-Language

./: .gitattributes  .gitignore  CMakeLists.txt  Quantum Language.txt  README.md  build.bat  build_errors.txt  build_log.txt  quantum.bat  test_results.txt  tmp_math_debug.sa
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
design/: Lexer.h.md  explicit-keyword-in-cpp.md
docs/: ARCHITECTURE.md  BUILD.md  FUTURE_PLAN.md  SETUP.md  SYNTAX.md
docs/design/: 01-architecture-overview.md  02-language-specification.md  03-implementation-details.md  04-standard-library.md  05-testing-strategy.md  06-future-roadmap.md  07-project-summary.md  README.md
examples/: C.sa  advanced.sa  cybersec.sa  joke.sa  quantum_cybersecurity_suite.sa  scanf_test.sa  test_type_system.sa
examples/C++/OOPs/Lab 1/: LAB01-TASK05.sa  LAB01-TASK07.sa  LAB01-TASK08.sa
examples/demo/: demo05.sa  demo06.sa  demo07.sa  demo08.sa  demo09.sa  demo10.sa  demo11.sa  demo12.sa  demo13.sa
extensions/: package-lock.json  package.json
extensions/src/: extension.ts  server.ts
include/: AST.h  Interpreter.h  Lexer.h  Parser.h  Token.h  TypeChecker.h  Value.h
src/: Interpreter.cpp  Lexer.cpp  Parser.cpp  TypeChecker.cpp  Value.cpp  Vm.cpp  main.cpp
src/compiler/: CompilerCore.cpp  CompilerExpressions.cpp  CompilerFunctions.cpp  CompilerStatements.cpp
src/parser/: ParserExpressions.cpp  ParserLiterals.cpp  ParserStatements.cpp
src/vm/: VmArrayMethods.cpp  VmCore.cpp  VmNatives.cpp  VmRun.cpp  VmStringMethods.cpp
tests/: date helper.sa  file operations.sa  form input.sa  guess_number.sa  hangman.sa  input sanitizer.sa  linear search.sa  merge sort.sa  password_generator.sa  text_analyzer.sa  url helper.sa
